syntax = "proto3";

package header;

message Header {
  // Signature must be 0x3A7F9C42
  uint32 signature = 1;
  // Version number: 8 bits for the major version, 8 for the minor
  uint32 version = 2;
  // Salt for computing keys
  bytes master_salt = 3;
  // IV for ChaCha20
  bytes encryption_iv = 4;
  // Parameters for the argon2 key generation
  KDFParams kdf_parameters = 5;
  // Size of input data chunks in block stream
  uint32 chunk_size = 6;
}

message KDFParams {
  // Add fields specific to argon2 key derivation parameters here
  uint32 memory_cost = 1;
  uint32 iterations = 2;
  uint32 parallelism = 3;
}
